--- a/train-test-split.ipynb
+++ b/train-test-split.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d28dc47b",
+   "id": "58226c65",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:28.904550Z",
-     "iopub.status.busy": "2022-11-15T08:57:28.903379Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.223251Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.221866Z"
+     "iopub.execute_input": "2022-11-15T09:07:32.917749Z",
+     "iopub.status.busy": "2022-11-15T09:07:32.917139Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.134865Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.133624Z"
     },
     "papermill": {
-     "duration": 1.331196,
-     "end_time": "2022-11-15T08:57:30.226861",
+     "duration": 1.227897,
+     "end_time": "2022-11-15T09:07:34.137862",
      "exception": false,
-     "start_time": "2022-11-15T08:57:28.895665",
+     "start_time": "2022-11-15T09:07:32.909965",
      "status": "completed"
     },
     "tags": []
@@ -32,19 +32,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3d0f0eb8",
+   "id": "3facbe57",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.241571Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.241118Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.270508Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.269134Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.148657Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.147521Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.174636Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.173477Z"
     },
     "papermill": {
-     "duration": 0.04165,
-     "end_time": "2022-11-15T08:57:30.273654",
+     "duration": 0.035733,
+     "end_time": "2022-11-15T09:07:34.177876",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.232004",
+     "start_time": "2022-11-15T09:07:34.142143",
      "status": "completed"
     },
     "tags": []
@@ -63,19 +63,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c6aee056",
+   "id": "d189b24c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.285224Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.284803Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.309517Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.308149Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.187937Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.187529Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.210786Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.209729Z"
     },
     "papermill": {
-     "duration": 0.033543,
-     "end_time": "2022-11-15T08:57:30.312247",
+     "duration": 0.03105,
+     "end_time": "2022-11-15T09:07:34.213333",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.278704",
+     "start_time": "2022-11-15T09:07:34.182283",
      "status": "completed"
     },
     "tags": []
@@ -156,19 +156,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53d819dd",
+   "id": "3d47bf83",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.322860Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.322425Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.333600Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.332618Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.224135Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.222935Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.233951Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.233033Z"
     },
     "papermill": {
-     "duration": 0.019423,
-     "end_time": "2022-11-15T08:57:30.336281",
+     "duration": 0.018968,
+     "end_time": "2022-11-15T09:07:34.236624",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.316858",
+     "start_time": "2022-11-15T09:07:34.217656",
      "status": "completed"
     },
     "tags": []
@@ -185,19 +185,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6bf5f2e7",
+   "id": "8ff13451",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.347669Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.347239Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.362117Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.360828Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.247115Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.245985Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.259471Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.258133Z"
     },
     "papermill": {
-     "duration": 0.023728,
-     "end_time": "2022-11-15T08:57:30.364706",
+     "duration": 0.021324,
+     "end_time": "2022-11-15T09:07:34.262052",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.340978",
+     "start_time": "2022-11-15T09:07:34.240728",
      "status": "completed"
     },
     "tags": []
@@ -317,19 +317,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "32a9649c",
+   "id": "b18df1ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.375851Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.375423Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.390321Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.388838Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.273033Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.272631Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.285008Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.283955Z"
     },
     "papermill": {
-     "duration": 0.02368,
-     "end_time": "2022-11-15T08:57:30.393072",
+     "duration": 0.020537,
+     "end_time": "2022-11-15T09:07:34.287384",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.369392",
+     "start_time": "2022-11-15T09:07:34.266847",
      "status": "completed"
     },
     "tags": []
@@ -449,19 +449,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c383543d",
+   "id": "76185f05",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.407131Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.406634Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.416623Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.415264Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.297989Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.297605Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.307596Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.306691Z"
     },
     "papermill": {
-     "duration": 0.020152,
-     "end_time": "2022-11-15T08:57:30.419505",
+     "duration": 0.018043,
+     "end_time": "2022-11-15T09:07:34.309948",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.399353",
+     "start_time": "2022-11-15T09:07:34.291905",
      "status": "completed"
     },
     "tags": []
@@ -474,19 +474,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4da61ee1",
+   "id": "b8739a1f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.431298Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.430891Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.442248Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.440713Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.320400Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.319999Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.329251Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.328103Z"
     },
     "papermill": {
-     "duration": 0.020489,
-     "end_time": "2022-11-15T08:57:30.444904",
+     "duration": 0.017316,
+     "end_time": "2022-11-15T09:07:34.331693",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.424415",
+     "start_time": "2022-11-15T09:07:34.314377",
      "status": "completed"
     },
     "tags": []
@@ -562,19 +562,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fe7ad996",
+   "id": "07d3218e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.457166Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.456381Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.465213Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.463580Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.346250Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.345648Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.355200Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.354281Z"
     },
     "papermill": {
-     "duration": 0.017845,
-     "end_time": "2022-11-15T08:57:30.467826",
+     "duration": 0.021568,
+     "end_time": "2022-11-15T09:07:34.358748",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.449981",
+     "start_time": "2022-11-15T09:07:34.337180",
      "status": "completed"
     },
     "tags": []
@@ -588,19 +588,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0e50f457",
+   "id": "9cc32548",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.479811Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.479368Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.490822Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.489568Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.373380Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.372784Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.383641Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.382545Z"
     },
     "papermill": {
-     "duration": 0.020522,
-     "end_time": "2022-11-15T08:57:30.493420",
+     "duration": 0.020471,
+     "end_time": "2022-11-15T09:07:34.385978",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.472898",
+     "start_time": "2022-11-15T09:07:34.365507",
      "status": "completed"
     },
     "tags": []
@@ -682,19 +682,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d8a3959e",
+   "id": "ce8d0694",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.505363Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.504907Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.513484Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.511986Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.397472Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.397091Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.403716Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.402623Z"
     },
     "papermill": {
-     "duration": 0.017382,
-     "end_time": "2022-11-15T08:57:30.515919",
+     "duration": 0.015057,
+     "end_time": "2022-11-15T09:07:34.405940",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.498537",
+     "start_time": "2022-11-15T09:07:34.390883",
      "status": "completed"
     },
     "tags": []
@@ -718,55 +718,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "230f1ba2",
+   "id": "db1f3abd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.528457Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.528067Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.535363Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.534060Z"
+     "iopub.execute_input": "2022-11-15T09:07:34.419429Z",
+     "iopub.status.busy": "2022-11-15T09:07:34.418229Z",
+     "iopub.status.idle": "2022-11-15T09:07:34.444670Z",
+     "shell.execute_reply": "2022-11-15T09:07:34.443394Z"
     },
     "papermill": {
-     "duration": 0.016827,
-     "end_time": "2022-11-15T08:57:30.538007",
+     "duration": 0.036156,
+     "end_time": "2022-11-15T09:07:34.447309",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.521180",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__notebook__.ipynb']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir(\"./\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a22c8a26",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-15T08:57:30.551056Z",
-     "iopub.status.busy": "2022-11-15T08:57:30.550366Z",
-     "iopub.status.idle": "2022-11-15T08:57:30.580778Z",
-     "shell.execute_reply": "2022-11-15T08:57:30.579323Z"
-    },
-    "papermill": {
-     "duration": 0.040311,
-     "end_time": "2022-11-15T08:57:30.583709",
-     "exception": false,
-     "start_time": "2022-11-15T08:57:30.543398",
+     "start_time": "2022-11-15T09:07:34.411153",
      "status": "completed"
     },
     "tags": []
@@ -775,19 +739,20 @@
    "source": [
     "train_names.to_csv(\"./train.csv\")\n",
     "test.to_csv(\"./test.csv\")\n",
+    "test_names.to_csv(\"./scoring.csv\")\n",
     "sample_submission.to_csv(\"./sample_submission.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a60735c2",
+   "id": "56f8cb3d",
    "metadata": {
     "papermill": {
-     "duration": 0.005001,
-     "end_time": "2022-11-15T08:57:30.594537",
+     "duration": 0.004467,
+     "end_time": "2022-11-15T09:07:34.456907",
      "exception": false,
-     "start_time": "2022-11-15T08:57:30.589536",
+     "start_time": "2022-11-15T09:07:34.452440",
      "status": "completed"
     },
     "tags": []
@@ -816,14 +781,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.877511,
-   "end_time": "2022-11-15T08:57:31.424136",
+   "duration": 11.398226,
+   "end_time": "2022-11-15T09:07:35.184184",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-11-15T08:57:19.546625",
+   "start_time": "2022-11-15T09:07:23.785958",
    "version": "2.3.4"
   }
  },
